bump version to 2.1.3, adding BasicTeamManager bug fixes